# struct-meta

./: CMakeLists.txt  Readme.md
inc/: meta.h  metareader.h  metautils.h  metawriter.h
src/: CMakeLists.txt  meta.cpp  metareader.cpp  metautils.cpp  metawriter.cpp
tests/: CMakeLists.txt  simple_json.cpp
